--- a/registrationapp/views/deny.ejs
+++ b/registrationapp/views/deny.ejs
@@ -32,7 +32,8 @@
 </head>
 <body>
     <div class="container">
-        <h1><%= message %></h1>
+        <h1><%= message %><a href="/ok">OK</a></h1>
+        
     </div>
 </body>
 </html>
